# agentSecOps_Guardian

./: .dockerignore  .env.example  .flake8  .gitignore  DASHBOARD.md  Dockerfile  LICENSE  README.md  example_backend.py  pyproject.toml  pytest.ini  report.md  requirements-dev.txt  requirements.txt  run_server.py  setup.py  test_api_key.py
.github/workflows/: agentsecops-parsers.yml  ci.yml  deploy.yml  publish.yml
agentsecops/: __init__.py  cli.py  main.py  mistral_client.py
agentsecops/parsing/: __init__.py  textfile.py
agentsecops/promptregistry/: __init__.py
agentsecops/reporting/: __init__.py
agentsecops/securityinstructions/: __init__.py
deploy/: agentsecops.service  setup_server.sh
docs/: CONTRIBUTING.md
src/: main.py  social_media_backend.py
src/static/: app.js  index.html  styles.css
tests/: run_server.py  test_api_key.py  test_api_key_script.py  test_main.py  test_run_server.py  test_social_media_backend.py  test_textfile_parsing.py
tests/src/: __init__.py  main.py  social_media_backend.py
