[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsecops"
dynamic = ["version"]
description = "AI-Powered Security Analysis Tool for detecting vulnerabilities, prompt injections, and hallucination risks"
authors = [
    {name = "AgentSecOps Team", email = "security@agentsecops.ai"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities"
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.28.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "pylint>=2.17.0",
    "mypy>=1.5.0",
    "ipython>=8.14.0",
    "ipdb>=0.13.13",
    "build>=1.0.0",
    "twine>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/agentsecops/guardian"
Documentation = "https://github.com/agentsecops/guardian/blob/main/README.md"
Repository = "https://github.com/agentsecops/guardian"
Issues = "https://github.com/agentsecops/guardian/issues"

[project.scripts]
secure = "agentsecops.main:main"

[tool.setuptools]
packages = ["agentsecops", "agentsecops.parsing", "agentsecops.securityinstructions", "agentsecops.reporting", "agentsecops.promptregistry"]

[tool.setuptools.dynamic]
version = {attr = "agentsecops.__version__"}

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=agentsecops --cov-report=term-missing"
testpaths = ["tests"]